--- a/app/views/components/_header.html.erb
+++ b/app/views/components/_header.html.erb
@@ -75,7 +75,7 @@
                 </li>
               <% else %>
                 <li>
-                  <%= link_to destroy_user_session_path,method: :delete do %>
+                  <%= link_to destroy_user_session_path, :method => :delete do %>
                     <i class="fa fa-unlock-alt"></i> Logout
                   <% end %>
                 </li>
