--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -32,5 +32,11 @@
 	</section>
 	
 	<%#= render '/components/footer' %>
+	<script src="js/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery.scrollUp.min.js"></script>
+	<script src="js/price-range.js"></script>
+  <script src="js/jquery.prettyPhoto.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
