--- a/app/views/components/_left_slider.html.erb
+++ b/app/views/components/_left_slider.html.erb
@@ -1,7 +1,6 @@
 <div class="left-sidebar">
   <h2>Category</h2>
   <div class="panel-group category-products" id="accordian"><!--category-productsr-->
-  <% if @categories.present? %>
     <% @categories.each do |category| %>
       <div class="panel panel-default">
         <div class="panel-heading">
@@ -16,7 +15,7 @@
             </a>
           </h4>
         </div>
-        <% if category.brands.present? && @category.present? %>
+        <% if category.brands.present? %>
           <div id="<%= category.id %>" class="<%= collapse_css(@category, category) %>">
             <div class="panel-body">
               <ul>
@@ -33,7 +32,6 @@
         <% end %>
       </div>
     <% end %>
-  <% end %>
   </div><!--/category-products-->
 
   <div class="brands_products"><!--brands_products-->
@@ -41,7 +39,9 @@
     <div class="brands-name">
       <ul class="nav nav-pills nav-stacked">
         <% @brands.each do |brand| %>
-          <li><a href="#"> <span class="pull-right">(<%= brand.products.count%>)</span><%= brand.name %></a></li>
+          <% if brand.products.present? %>
+            <li><a href="#"> <span class="pull-right">(<%= brand.products.count%>)</span><%= brand.name %></a></li>
+          <% end %>
         <% end %>
       </ul>
     </div>
