--- a/app/views/components/_header.html.erb
+++ b/app/views/components/_header.html.erb
@@ -49,8 +49,6 @@
             <ul class="nav navbar-nav">
               <li><a href="#"><i class="fa fa-user"></i> Account</a></li>
               <li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
-              <li><a href="#"><i class="fa fa-crosshairs"></i> Checkout</a>
-              </li>
               <% if user_signed_in? %>  
                 <li>
                   <%= link_to cart_items_path, id: 'total-count' do%>
@@ -75,7 +73,7 @@
                 </li>
               <% else %>
                 <li>
-                  <%= link_to destroy_user_session_path, :method => :delete do %>
+                  <%= link_to destroy_user_session_path,method: :delete do %>
                     <i class="fa fa-unlock-alt"></i> Logout
                   <% end %>
                 </li>
@@ -104,21 +102,20 @@
               <li><%= link_to 'Home', root_path, class: 'active' %></li>
               <li class="dropdown"><a href="#">Shop<i class="fa fa-angle-down"></i></a>
                                   <ul role="menu" class="sub-menu">
-                                      <li><a href="shop.html">Products</a></li>
-                  <li><a href="product-details.html">Product Details</a></li> 
-                  <li><a href="checkout.html">Checkout</a></li> 
-                  <li><a href="cart.html">Cart</a></li> 
-                  <li><a href="login.html">Login</a></li> 
+                                      <li><a href="#">Products</a></li>
+                  <li><a href="#">Product Details</a></li> 
+                  <li><a href="#">Checkout</a></li> 
+                  <li><a href="#">Cart</a></li> 
+                  <li><a href="#">Login</a></li> 
                                   </ul>
                               </li> 
               <li class="dropdown"><a href="#">Blog<i class="fa fa-angle-down"></i></a>
                                   <ul role="menu" class="sub-menu">
-                                      <li><a href="blog.html">Blog List</a></li>
-                  <li><a href="blog-single.html">Blog Single</a></li>
+                                      <li><a href="#">Blog List</a></li>
+                  <li><a href="#">Blog Single</a></li>
                                   </ul>
                               </li> 
-              <li><a href="404.html">404</a></li>
-              <li><a href="contact-us.html">Contact</a></li>
+              <li><a href="#">Contact</a></li>
             </ul>
           </div>
         </div>
