changes in category.html page

--- a/app/views/components/_category.html.erb
+++ b/app/views/components/_category.html.erb
@@ -1,6 +1,7 @@
 <div class="category-tab"><!--category-tab-->
   <div class="col-sm-12">
     <ul class="nav nav-tabs">
+    <% if @category.present? %>
     <% if @subcategories.present? %>
       <% @subcategories.each_with_index do |subcategory,index| %>
         <li class="<%= "active" if @subcategory.id == subcategory.id %>">
@@ -8,6 +9,7 @@
         </li>
       <% end %>  
     <% end %> 
+    <% end %>
     </ul>
   </div>
   <% if @products.present? %>
