--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -3,17 +3,17 @@
     <div class="row">
       <div class="col-sm-4 col-sm-offset-1 billing">
         <p>Edit Address</p>
-        <%= f.text_field :name , placeholder: "Name",id: "name", name: "address[billing][name]" %>
-        <%= f.text_field :address1 , placeholder: "Address 1 *", id: "address-field", name: "address[billing][address1]" %>
-        <%= f.text_field :address2 , placeholder: "Address 2", id: "address-field2", name: "address[billing][address2]" %>
-        <%= f.text_field :pincode , placeholder: "Zip / Postal Code *", id: "pincode", name: "address[billing][pincode]" %>
-        <%= f.text_field :city , placeholder: "City *", id: "city", name: "address[billing][city]" %>
-        <%= f.select(:country, ['United States', 'Bangladesh','UK','India','Pakistan','Ucrane','Canada','Dubai'], {include_blank: "-- Country --"}, id: "country", name: "address[billing][country]") %>
+        <%= f.text_field :name , placeholder: "Name",id: "name" %>
+        <%= f.text_field :address1 , placeholder: "Address 1 *", id: "address-field" %>
+        <%= f.text_field :address2 , placeholder: "Address 2" %>
+        <%= f.text_field :pincode , placeholder: "Zip / Postal Code *", id: "pincode" %>
+        <%= f.text_field :city , placeholder: "City *", id: "city" %>
+        <%= f.select(:country, ['United States', 'Bangladesh','UK','India','Pakistan','Ucrane','Canada','Dubai'], {include_blank: "-- Country --"}, id: "country") %>
         <% @state = ["Andaman and Nicobar Islands","Andhra Pradesh","Arunachal Pradesh","Assam","Bihar","Chandigarh","Chhattisgarh","Dadra and Nagar Haveli","Daman and Diu","Delhi","Goa","Gujarat","Haryana","Himachal Pradesh","Jammu and Kashmir","Jharkhand","Karnataka","Kerala","Lakshadweep","Madhya Pradesh","Maharashtra","Manipur","Meghalaya","Mizoram","Nagaland","Orissa","Pondicherry","Punjab","Rajasthan","Sikkim","Tamil Nadu","Tripura","Uttaranchal","Uttar Pradesh","West Bengal"] %>
-        <%= f.select(:state, @state, {include_blank: "-- State / Province / Region --"}, id: "state", name: "address[billing][state]") %>
-        <%= f.text_field :phone , placeholder: "Phone *", id: "phone", name: "address[billing][phone]" %>
-        <%= f.hidden_field :user_id, value: "#{current_user.id}", name: "address[billing][user_id]" %>
-        <%= f.hidden_field :address_type, value: "billing", name: "address[billing][address_type]" %>
+        <%= f.select(:state, @state, {include_blank: "-- State / Province / Region --"}, id: "state") %>
+        <%= f.text_field :phone , placeholder: "Phone *", id: "phone" %>
+        <%= f.hidden_field :user_id, value: "#{current_user.id}" %>
+        <%= f.submit "Update Address", class: 'btn btn-width1' %>
       </div>
     </div>
   <% end %>
