--- a/app/views/cart_items/_index_cart.html.erb
+++ b/app/views/cart_items/_index_cart.html.erb
@@ -33,7 +33,7 @@
                   <% product_quantity = cart_item.product.quantity>0 ? "" : "disabled" %>
                   <% cart_quantity = cart_item.quantity>1 ? "" : "disabled" %>
                   <%= link_to '+',cart_item_path(cart_item,quantity_update: "plus",product_id: cart_item.product_id), method: :put, class: "cart_quantity_up btn", remote: true %>
-                  <%= number_field_tag :quantity, "#{cart_item.quantity}", min: 1, max: (cart_item.quantity+cart_item.product.quantity), product_id: cart_item.product_id, class: 'cart_quantity_input', id: "quantity-update-#{cart_item.id}", remote: true %>
+                  <%= number_field_tag :quantity, "#{cart_item.quantity}", min: 1, max: cart_item.product.quantity, product_id: cart_item.product_id, class: 'cart_quantity_input', id: "quantity-update-#{cart_item.id}", remote: true %>
                   <%= link_to '-', cart_item_path(cart_item,quantity_update: "minus",product_id: cart_item.product_id), method: :put, class: "cart_quantity_down btn", remote: true %>
                 </div>
               </td>
@@ -126,6 +126,8 @@
         <h2 style="text-align: center;">Your Shopping Bag is Empty</h2>
         <br>
         <h4 style="text-align: center;">Add Product to your cart</h4>
+        <br>
+        <h4 style="text-align: center;"><%= link_to 'Continue Shopping', root_path, class: 'btn btn-width2' %></h4>
       </div>
     </div>
   </section>
