added wishlist in the application

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -2659,3 +2659,14 @@ h2.title {
 .table > thead > tr > .no-line {
     border-bottom: none;
 }
+
+.font-awesome-size {
+  margin-left: 140px;
+  margin-top: 10px;
+  font-size: 20px;
+}
+
+.font-awesome-size-show {
+  margin-top: 10px;
+  font-size: 20px;
+}
