--- a/app/views/products/_product_show.html.erb
+++ b/app/views/products/_product_show.html.erb
@@ -30,6 +30,10 @@
         </span>
       <% end %>
     <% end %>
+    <div id='wishlist-product-<%= @product.id %>'>
+      <%= render 'products/product_wishlist' %>
+    </div>
+    <hr>
   <% else %>
     <%= image_tag "product-details/rating.png" %>
     <span>
@@ -41,6 +45,10 @@
         Add to cart
       <% end %>
     </span>
+    <%= link_to wish_lists_path(product_id: @product.id), method: :post, style: 'color: black', title: 'Add to Wishlist' do %>
+      <i class="fa fa-heart-o font-awesome-size-show"> Save to Wishlist</i>
+    <% end %>
+    <hr>
   <% end %>
   <p><b>Available Quantity:</b> <%= @product.quantity%></p>
   <p><b>Condition:</b> New</p>
