--- a/app/views/components/_recommended.html.erb
+++ b/app/views/components/_recommended.html.erb
@@ -38,12 +38,14 @@
         </div>
       <% end %>
     </div>
+  <% if @recommended.count>3 %>
     <a class="left recommended-item-control" href="#recommended-item-carousel" data-slide="prev">
     <i class="fa fa-angle-left"></i>
     </a>
     <a class="right recommended-item-control" href="#recommended-item-carousel" data-slide="next">
     <i class="fa fa-angle-right"></i>
-    </a>      
+    </a>
+  <% end %>      
   </div>
   <% else %>
     <section id="cart_items">
