changes in user mailer

--- a/app/views/user_mailer/user_message_email.html.erb
+++ b/app/views/user_mailer/user_message_email.html.erb
@@ -23,7 +23,7 @@
       <tr>
         <td style="padding:15px 25px;" align="left">
           <h2 style="margin:0 0 10px; 0;">Hello <%= @contact.name %>,</h2>
-          <p style="margin:0 0 10px; 0;">Thanks for Contacting E-Shopper</p>
+          <p style="margin:0 0 10px; 0;">Thanks for Contacting E-Shopper.</p>
           <table border="0" style="padding:15px; border:1px solid #cccccc;" bgcolor="F4F4F4" cellpadding="0" cellspacing="5px">
             <tbody>
               <tr style="padding:0 15px;">
